--- a/static/index.html
+++ b/static/index.html
@@ -9,19 +9,19 @@
         font-family: Open Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
       }
 
-      header {
-        background: #008dcb;
-        color: white;
-        position: relative;
-        height: 50px;
-      }
-
       footer {
         background: #008dcb;
         color: white;
         position: relative;
         height: 50px;
         bottom: 0;
+      }
+
+      header {
+        background: #008dcb;
+        color: white;
+        position: relative;
+        height: 50px;
       }
 
       #userDetails {
@@ -51,8 +51,10 @@
 
       #content ul li {
         background-color: #ecf9ff;
-        line-height: 40px;
+        line-height: 60px;
         padding-left:20px;
+        position: relative;
+        cursor: pointer;
       }
 
       #content ul li:nth-child(even) {
@@ -61,6 +63,11 @@
 
       #content ul li:hover {
         background-color: #c7eeff;
+      }
+
+      .taskList .taskValue {
+        position: absolute;
+        right:10px;
       }
     </style>
   </head>
@@ -74,16 +81,14 @@
     <div id="content">
       <ul class="taskList">
         <li>
-          <label>Dishwasher</label>
-          <button>+</button>
+          <span>Dishwasher</span>
+          <span class="taskValue">+50c</span>
         </li>
         <li>
-          <label>Put the bins out</label>
-          <button>+</button>
+          <span>Put the bins out</span>
         </li>
         <li>
-          <label>Sweep the floor</label>
-          <button>+</button>
+          <span>Sweep the floor</span>
         </li>
       </ul>
     </div>
